# ARMSX2-NX

./: README.md
.github/ISSUE_TEMPLATE/: 1-game-bug-report.yml  2-app-bug-report.yml
.github/workflows/: switch_build.yml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cmake/: BuildParameters.cmake  Pcsx2Utils.cmake  SearchForStuff.cmake
app/src/main/cpp/common/: Assertions.cpp  CMakeLists.txt  DynamicLibrary.cpp  FileSystem.cpp  HostSys.h
app/src/main/cpp/common/Horizon/: Horizon.h  HorizonCompat.cpp  HorizonHostSys.cpp  HorizonMisc.cpp  HorizonNet.cpp  HorizonThreads.cpp  HorizonTime.h
app/src/main/cpp/common/Horizon/compat/: ifaddrs.h
app/src/main/cpp/common/Horizon/compat/netinet/: ip.h
app/src/main/cpp/common/emitter/: x86emitter.cpp  x86emitter.h  x86types.h
app/src/main/cpp/pcsx2/: CMakeLists.txt  COP0.cpp  Config.h  MTGS.cpp  MTVU.cpp  Memory.cpp  PINE.cpp  Pcsx2Config.cpp  PerformanceMetrics.cpp  PerformanceMetrics.h  R5900.h  SPR.cpp  Sif0.cpp  VMManager.cpp  vtlb.cpp
app/src/main/cpp/pcsx2/CDVD/: CDVD.cpp
app/src/main/cpp/pcsx2/CDVD/Horizon/: DriveUtility.cpp  IOCtlSrc.cpp
app/src/main/cpp/pcsx2/DEV9/: AdapterUtils.cpp  DEV9.cpp  net.cpp
app/src/main/cpp/pcsx2/DEV9/InternalServers/: DNS_Server.cpp
app/src/main/cpp/pcsx2/DEV9/Sessions/ICMP_Session/: ICMP_Session.cpp
app/src/main/cpp/pcsx2/DEV9/Sessions/TCP_Session/: TCP_Session_Out.cpp
app/src/main/cpp/pcsx2/DEV9/Sessions/UDP_Session/: UDP_Common.cpp  UDP_Session.cpp
app/src/main/cpp/pcsx2/GS/: GS.cpp  GS.h  GSVector.h  GSVector4_arm64.h
app/src/main/cpp/pcsx2/GS/Renderers/Common/: GSDevice.cpp  GSDevice.h  GSDirtyRect.cpp  GSFastList.h
app/src/main/cpp/pcsx2/GS/Renderers/DK3D/: GSDeviceDK.cpp  GSDeviceDK.h  GSTextureDK.cpp  GSTextureDK.h
app/src/main/cpp/pcsx2/GS/Renderers/DK3D/shaders/: cas_csh.glsl  clut_fsh.glsl  color_fsh.glsl  convert_8i_fsh.glsl  convert_fsh.glsl  convert_int_fsh.glsl  convert_vsh.glsl  date_fsh.glsl  downsample_fsh.glsl  fullscreen_vsh.glsl  fxaa_fsh.glsl  imgui_fsh.glsl  imgui_vsh.glsl  interlace_fsh.glsl  merge_fsh.glsl  primid_init_fsh.glsl  shadeboost_fsh.glsl  texture_fsh.glsl  tfx_fsh.glsl  tfx_vsh.glsl  triangle_vsh.glsl  yuv_fsh.glsl
app/src/main/cpp/pcsx2/GS/Renderers/HW/: GSRendererHW.cpp  GSTextureCache.cpp
app/src/main/cpp/pcsx2/GS/Renderers/Null/: GSDeviceNull.cpp  GSDeviceNull.h
app/src/main/cpp/pcsx2/GS/Renderers/SW/: GSDrawScanlineCodeGenerator.arm64.cpp  GSDrawScanlineCodeGenerator.arm64.h  GSSetupPrimCodeGenerator.arm64.cpp  GSSetupPrimCodeGenerator.arm64.h
app/src/main/cpp/pcsx2/Host/: AudioStream.cpp  AudioStream.h  AudioStreamTypes.h  HorizonAudioStream.cpp
app/src/main/cpp/pcsx2/ImGui/: FullscreenUI.cpp  ImGuiManager.cpp  ImGuiOverlays.cpp
app/src/main/cpp/pcsx2/Input/: InputManager.cpp
app/src/main/cpp/pcsx2/SIO/Memcard/: MemoryCardFile.cpp  MemoryCardFolder.cpp
app/src/main/cpp/pcsx2/SIO/Pad/: Pad.cpp
app/src/main/cpp/pcsx2/USB/usb-pad/: usb-pad.cpp
app/src/main/cpp/pcsx2/arm64/: VixlHelpers.cpp  VixlHelpers.h
app/src/main/cpp/pcsx2/x86/: R5900_Profiler.h  iCOP0.cpp  iCore.cpp  iFPU.cpp  iFPUd.cpp  iMMI.cpp  iR3000A.cpp  iR3000Atables.cpp  iR5900Misc.cpp  microVU.h  microVU_Execute.inl  microVU_IR.h  microVU_Misc.h  microVU_Misc.inl  newVif.h
app/src/main/cpp/pcsx2/x86/ix86-32/: iCore.cpp  iR5900.cpp  iR5900Arit.cpp  iR5900AritImm.cpp  iR5900Branch.cpp  iR5900Jump.cpp  iR5900LoadStore.cpp  iR5900Move.cpp  iR5900MultDiv.cpp  iR5900Shift.cpp  iR5900Templates.cpp  recVTLB.cpp
switch/app/: CMakeLists.txt  HorizonHost.cpp  HorizonHost.h  main.cpp
switch/app/cmake/: inline_shader_includes.cmake  prepend_define.cmake
switch/cmake-probe/: CMakeLists.txt
switch/harness/: CMakeLists.txt  HorizonHost.cpp  main.cpp
